add endpoint get sessions
